# memex

./: .dockerignore  .geminiignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  BLUEPRINT.md  CODEBASE_REVIEW_REPORT.md  CODEOWNERS  CONTRIBUTING.md  DOCUMENTATION_BACKLOG.md  FAQ.md  NOTICES  README.md  SPEAKER_NOTES.md  TASKS.md  check_jobs.ps1  docker-compose.yaml  env.template  justfile  litellm_config.yaml  mcp-template.json  presentation-menu.html  pyproject.toml  zensical.toml
.claude-plugin/: marketplace.json
.claude/rules/: memex.md
.devcontainer/: .env.example  Dockerfile  devcontainer.json
.gemini/prompts/: gemini-review.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/hermes/: action.yml
.github/prompts/: issue-triage-system.md  review-system.md
.github/workflows/: CI.yaml  ci.yaml  docker.yaml  firefox-extension-release.yaml  gemini-review.yaml  hermes-issue-triage.yaml  hermes-review.yaml  release.yaml  test-claude-ollama.yaml
.tmp/: TESTING.md
.tmp/openclaw-memex-plugin/: package.json
docker/dashboard/: Dockerfile  nginx.conf
docker/mcp/: Dockerfile
docker/memex/: Dockerfile  Dockerfile.jetson
docs/: .gitignore  feedback-log.md  homelab-claude-code-setup.md  homelab-deployment.md  homelab-troubleshooting.md  index.md  upstream-feedback-report.md
docs/examples/: batch_ingestion.py  batch_ingestion_full.py
docs/examples/alerting/: memex-alerts.yaml
docs/explanation/: architecture-overview.md  dashboard-architecture.md  extraction-pipeline.md  hindsight-framework.md  inference-model-backends.md  offline-catalog-sync.md  openclaw-plugin.md  reflection-and-mental-models.md  retrieval-strategies.md
docs/how-to/: batch-ingestion.md  configure-memex.md  database-migrations.md  delete-archival.md  doc-search-vs-memory-search.md  firefox-extension.md  memory-budget.md  migrate-mcp-v007-to-v008.md  note-templates.md  openclaw-integration.md  organize-with-vaults.md  server-configuration-templates.md  setup-claude-code.md  sync-notes.md  using-mcp.md
docs/reference/: cli-commands.md  configuration.md  evaluation-report.md  mcp-tools.md  memexapi-reference.md  rest-api.md
docs/tutorials/: ai-agent-memory.md  getting-started.md  using-the-dashboard.md
recordings/: README.md
recordings/cli/: entity-list.tape  memory-add-url.tape  memory-search-answer.tape  memory-search.tape  note-search-reason.tape  record-claude-code.sh  record-cli.sh  stats-system.tape
recordings/dashboard/: package-lock.json  package.json  tsconfig.json
recordings/dashboard/scripts/: record-entity-graph.ts  record-knowledge-flow.ts  record-lineage.ts  record-overview.ts  (+1 more)
recordings/seed-data/: seed_demo_db.py
scripts/: distribute.py  justfile  memex_export_local.py  meshnet-setup.ps1  run_export.sh  test-meshnet.ps1
scripts/NER/: .gitignore  MODEL_CARD.md  eval.py  train.py  train_data.py
scripts/cross_encoder/: .gitignore  MODEL_CARD.md  README.md  baseline.py  eval_baseline.py  eval_pairwise.py  eval_qat.py  justfile  train_qat.py
scripts/embeddings/: .gitignore  MODEL_CARD.md  baseline.py  eval.py  train.py
scripts/tests/: conftest.py  test_export.py
tests/: conftest.py  test_background_ingestion.py  test_background_user_notes.py  test_cli_doc_search.py  test_cli_memory_vault.py  test_cli_note_search.py  test_e2e_append_endpoint.py  test_e2e_audit_logging.py  test_e2e_auth_acl.py  test_e2e_background_contradiction.py  test_e2e_batch.py  test_e2e_batch_progress.py  test_e2e_cli.py  test_e2e_cli_assets.py  test_e2e_cli_memory.py  test_e2e_delete_note_cleanup.py  test_e2e_doc_search_chunks.py  test_e2e_entity_resolver_v2.py  test_e2e_entity_resolver_v2_retrieval.py  test_e2e_formatted_text_where.py  test_e2e_frontmatter_pipeline.py  test_e2e_health.py  test_e2e_incremental_idempotency.py  test_e2e_keyword_search_tsvector.py  test_e2e_list_notes_date_field.py  test_e2e_obsidian_sync.py  test_e2e_page_index.py  test_e2e_reflect.py  test_e2e_resources.py  test_e2e_search_budget.py  test_e2e_search_lineage.py  test_e2e_vaults.py  test_e2e_workflow.py  test_schema_sync.py
(+20 files in other folders)
